# path_macro2

./: Cargo.toml  LICENSE-APACHE  README.md
src/: lib.rs
tests/: comma_path.rs  comma_path_const.rs  slash_path.rs  slash_path_const.rs
