[package]
name = "path_macro2"
version = "0.1.3"
edition = "2021"
rust-version = "1.56.0"
authors = ["yunique unic<yuniqueunic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Cross-platform path construction macro supporting both slash (/) and comma (,) syntax with variable interpolation"
categories = ["filesystem", "development-tools", "os", "parsing"]
keywords = [
    "path",
    "macro",
    "filesystem",
    "cross-platform",
    "path-construction",
]
repository = "https://github.com/yuniqueunic/path_macro2"
documentation = "https://docs.rs/path_macro2"
readme = "README.md"

[features]
default = []
# no_std = [] # TODO: add no_std support

[dependencies]


[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "path_macro2 = \"[0-9]+\\.[0-9]+\\.[0-9]+[^\"]*\"", replace = "path_macro2 = \"{{version}}\"" },
]
